<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:textAlignment="center"
        android:textSize="@dimen/text20"
        android:text="@string/notes"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/chipNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
        app:layout_constraintBottom_toTopOf="@+id/dashboardList"
        layout="@layout/chip_note_label"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboardList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintBottom_toTopOf="@+id/addNoteText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipNotes" />

    <EditText
        android:id="@+id/addNoteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_note"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addNoteButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/addNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/add_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>